# QuickPlay

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/quickplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  WangYiFFmpeg.cpp  WangYiFFmpeg.h  macro.h  native-lib.cpp
app/src/main/java/com/example/quickplayer/: MainActivity.java  QuickPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/quickplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
